# alagris.github.io

./: index.html  pom.xml
IntergationTests/: Scrape.py  Scrape_new.py  test.py
backend/Compiler/: pom.xml
build-system/: pom.xml  solomonoff  test.sh
build-system/src/test/resources/: build.expected  build.toml  build2.expected  build2.input  build2.toml  build3.expected  build3.input  build3.toml  build4.expected  build4.input  build4.toml  build5.expected  build5.input  build5.toml  build6.expected  build6.input  build6.toml  build7.input  build7.toml  build8.expected  build8.input  build8.toml  function3.star  mirror.star  sample2.mealy  sample3.mealy  sample3.ostia  sample_load.mealy
c/: .gitignore  README.md  compile.sh  compileJS.sh  genXCode.sh  invalid_automatons  run.sh  test_inputs  valid_automatons
c/src/: ASTMealyAtomic.c  ASTMealyConcat.c  ASTMealyKleene.c  ASTMealyUnion.c  AST_FSA.c  AST_FSAArg.c  AST_FSAAtomic.c  AST_FSAConcat.c  AST_FSAID.c  AST_FSAInputExpression.c  AST_FSAKleene.c  AST_FSARange.c  AST_FSAUnion.c  CMakeLists.txt  FSA.c  FSAConcat.c  FSAFunction.c  FSAKleeneClousure.c  FSAUnion.c  InputExpression.c  LiteralList.c  MealyAtomic.c  MealyConcat.c  MealyUnion.c  StringList.c  automaton.c  cli.c  mealy.c  mocks.c  stringBuffer.c  syntax_parser.y  syntax_scanner.l
c/src/include/: AST.h  ASTMealy.h  ASTMealyAtomic.h  ASTMealyConcat.h  ASTMealyKleene.h  ASTMealyUnion.h  AST_FSA.h  AST_FSAArg.h  AST_FSAAtomic.h  AST_FSAConcat.h  AST_FSAID.h  AST_FSAInputExpression.h  AST_FSAKleene.h  AST_FSARange.h  AST_FSAUnion.h  FSA.h  FSAConcat.h  FSAFunction.h  FSAKleeneClousure.h  FSAUnion.h  InputExpression.h  LiteralList.h  MealyAtomic.h  MealyConcat.h  MealyUnion.h  StringList.h  automaton.h  config.h.in  data.h  mealy.h  mocks.h  parser.h
c/test/: main.c  makefile  parser.l  parser.y
docker/: Dockerfile.old  build.sh  docker-compose.yaml  init-letsencrypt.sh
docker/config/nginx/site-confs/: default
docker/nginx/: solomonoff.conf
mealy_highlighting/: mealy.cson  mealy.js  mealy.json  mealy.xml  mealy.yaml
src/main/resources/templates/: DocPage.html  DownloadPage.html  DownloadPage2.html  EXindex.html  compiler.html  compiler1.html  compiler2.html  contactPage.html  doc.html  infpage.html  rest.html  start.html
src/main/webapp/WEB-INF/: web.xml
web/: about.html  contact.html  index.html  infpage.html  main.html  old_main.html  page.html  prototype.html  pt.html  style.css  test.html  test.js  test.wasm  web_mealy_compiler.html
web/highlighting/: f0.ma  f1.ma  highlight-within-textarea.css  highlight.pack.js  hl_sempl.html  hl_sempl1.html  hl_sempl2.html  index (1).html  t0.html  word-highlighter.html  word-jquery.highlight-within-textarea.js
web/highlighting/ace-master/: demo.html  demo1.html
web/highlighting/codemirror-5.54.0/: code-mirror-hello-world.html
web/highlighting/textarea-tabs-syntax-highlighting/: README.markdown  license.txt
web/highlighting/textarea-tabs-syntax-highlighting/src/: index.html
(+72 files in other folders)
